# Chess_2

./: Board.cpp  Board.h  ChessWindow.cpp  ChessWindow.h  Piece.cpp  Piece.h  README.md  Tile.cpp  Tile.h  main.cpp  meson.build
builddir/: .gitignore  .ninja_deps  .ninja_log  build.ninja  compile_commands.json
builddir/meson-info/: intro-buildoptions.json  intro-buildsystem_files.json  intro-install_plan.json  intro-installed.json  intro-projectinfo.json  intro-targets.json  meson-info.json
builddir/meson-logs/: meson-log.txt
builddir/meson-private/: animationwindow.pc  coredata.dat.prev
builddir/meson-private/__CMake_compiler_info__/: CMakeCache.txt  CMakeLists.txt  CMakeMesonTempToolchainFile.cmake  cmake_trace.txt
builddir/meson-private/cmake_animationwindow/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CMakeMesonToolchainFile.cmake  MesonTemp.sln  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  cmake_trace.txt
builddir/meson-uninstalled/: animationwindow-uninstalled.pc
subprojects/animationwindow/: meson.build
subprojects/animationwindow/src/: Image.cpp
